Assignment 4: Session authentication and security

--- a/public/404.html
+++ b/public/404.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>404 — Not Found</title>
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 — Page Not Found | TYNDA</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-  <main class="container">
-    <section class="card center">
-      <h1>404</h1>
-      <p class="muted">Page not found.</p>
-      <a class="btn" href="/">Go Home</a>
-    </section>
-  </main>
+  <div class="auth-container">
+    <div class="card center animate-fadeInUp" style="max-width: 500px;">
+      <div style="font-size: 6rem; margin-bottom: 20px; opacity: 0.8;">🎵</div>
+      <h1
+        style="font-size: 4rem; margin-bottom: 8px; background: var(--gradient-primary); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+        404</h1>
+      <h2 style="margin-bottom: 16px;">Page Not Found</h2>
+      <p class="muted" style="margin-bottom: 32px;">
+        The page you're looking for doesn't exist or has been moved.
+      </p>
+      <div class="actions" style="justify-content: center;">
+        <a href="/" class="btn">Go Home</a>
+        <a href="/tracks" class="btn btn-ghost">Browse Tracks</a>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
