Feature: add personal playlists with full CRUD operations

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/tracks">Tracks</a>
+        <a href="/playlists">Playlists</a>
         <div class="nav-auth" id="nav-auth">
           <!-- Auth buttons will be injected here -->
         </div>
