--- a/public/tracks.html
+++ b/public/tracks.html
@@ -18,6 +18,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a class="active" href="/tracks">Tracks</a>
+        <a href="/playlists">Playlists</a>
         <div class="nav-auth" id="nav-auth">
           <!-- Auth buttons injected by JS -->
         </div>
