--- a/public/contact.html
+++ b/public/contact.html
@@ -18,6 +18,7 @@
         <a href="/about">About</a>
         <a class="active" href="/contact">Contact</a>
         <a href="/tracks">Tracks</a>
+        <a href="/playlists">Playlists</a>
         <div class="nav-auth" id="nav-auth"></div>
       </nav>
     </div>
